[gd_scene format=3 uid="uid://li0hft8r02xr"]

[ext_resource type="Script" uid="uid://di416b4ootpku" path="res://login/entry_page.gd" id="1_0jb1h"]
[ext_resource type="Texture2D" uid="uid://4y2h0afsrans" path="res://assets/MobileUserBg.png" id="2_i5s6q"]
[ext_resource type="Texture2D" uid="uid://c0ehtjk8ldhmu" path="res://assets/MobileEntryBg.png" id="3_uj0lx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jb1h"]
bg_color = Color(0, 0, 0, 0.84313726)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9529412, 0.78431374, 0.28627452, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i5s6q"]
bg_color = Color(0, 0, 0, 0.84313726)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9529412, 0.78431374, 0.28627452, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4i2w"]
bg_color = Color(0, 0, 0, 0.84313726)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9529412, 0.78431374, 0.28627452, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="EntryPage" type="Control" unique_id=2044182461]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_0jb1h")

[node name="TextureRect" type="TextureRect" parent="." unique_id=630482835]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i5s6q")
expand_mode = 1
stretch_mode = 6

[node name="LoginPanel" type="Control" parent="." unique_id=435126814]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel" unique_id=387450917]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_right = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CustomIDInput" type="LineEdit" parent="LoginPanel/VBoxContainer" unique_id=1434367088]
custom_minimum_size = Vector2(225, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_0jb1h")
placeholder_text = "E-mail"
alignment = 1

[node name="PasswordInput" type="LineEdit" parent="LoginPanel/VBoxContainer" unique_id=1278901718]
custom_minimum_size = Vector2(225, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_i5s6q")
secret = true

[node name="LoginButton" type="Button" parent="LoginPanel/VBoxContainer" unique_id=1545918363]
custom_minimum_size = Vector2(225, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_e4i2w")

[node name="SplashOverlay" type="TextureRect" parent="." unique_id=2110692922]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("3_uj0lx")
expand_mode = 1
stretch_mode = 5

[connection signal="text_changed" from="LoginPanel/VBoxContainer/CustomIDInput" to="." method="_on_custom_id_input_text_changed"]
